Fix overflow summaries

--- a/public/stylesheets/profiles.styl
+++ b/public/stylesheets/profiles.styl
@@ -405,11 +405,12 @@ section
 //SUMMARIES 
 .profile-summary,
 .profile-memberships
+  .profile-memberships-content
+      max-height 500px
+      overflow-y scroll
   .profile-summary-content,
   .profile-memberships-content
     font-size: 1em
-    max-height 500px
-    overflow-y scroll
     .summary-total
       font-size: 1.1em
       font-weight: bold
